--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Ubuntu:wght@300;400;500;700&display=swap"
       rel="stylesheet"
-      as="font"
-      crossorigin
     />
     <link
       rel="stylesheet"
@@ -28,26 +25,35 @@
   <body>
     <div class="container">
       <header>
-        <div class="logo">
-          <img src="src/img/logo/logo.jpg" alt="logo" />
-        </div>
-        <div class="search">
-          <div class="input-field">
-            <input class="search__box" type="text" placeholder="Search Books" />
+        <div class="header-container">
+          <div class="logo">
+            <img src="src/img/logo/bookworm.png" alt="logo" />
           </div>
-          <button class="search__icon"><i class="fas fa-search"></i></button>
+          <div class="search">
+            <div class="input-field">
+              <input
+                class="search__box"
+                type="text"
+                placeholder="Search Books"
+              />
+            </div>
+            <button class="search__icon"><i class="fas fa-search"></i></button>
+          </div>
+          <div class="bookmarks">
+            <i class="far fa-bookmark"></i>
+          </div>
         </div>
-        <div class="bookmarks"><i class="far fa-bookmark"></i></div>
       </header>
       <section>
-        <div class="search-container">Results</div>
+        <div class="search-container"></div>
       </section>
     </div>
     <footer>
       <p>
-        Made with <span><i class="fas fa-heart"></i></span> by
+        Made with &nbsp;<span><i class="fas fa-heart"></i></span>&nbsp; by
         <span class="name">Prabin Shrestha</span>
       </p>
     </footer>
   </body>
+  <script src="src/js/media.js"></script>
 </html>
