--- a/index.html
+++ b/index.html
@@ -65,5 +65,5 @@
       <div class="bookmarks-container"></div>
     </div>
   </body>
-  <script src="src/js/controller.js"></script>
+  <script type="module" src="src/js/controller.js"></script>
 </html>
