--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script defer src="src/js/media.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="body-container">
       <header>
         <div class="header-container">
           <div class="logo">
@@ -56,7 +56,7 @@
             date="1997"
             padding="0"
             justify-content="center"
-            book-id="OBHDSBL"
+            book-id="/works/OL27448W"
           >
             <div slot="title">Think and Grow Rich</div>
             <div slot="author">Napolien Hill</div>
@@ -84,31 +84,6 @@
       <div class="close"><i class="fas fa-times-circle"></i></div>
       <div class="container">
         <!-- Book information is rendered here -->
-        <!-- TODO: Create HTML template for showing book information -->
-        <div class="book-header">
-          <div class="title-bookmark">
-            <h1>Think and Grow Rich</h1>
-            <span><i class="far fa-bookmark"></i></span>
-          </div>
-          <h2 class="description">
-            What the rich teach their kids about money that the poor and middle
-            class do not!
-          </h2>
-          <h3 class="date">This edition was published in 2005</h3>
-        </div>
-        <div class="img-BScreen"></div>
-        <section class="content">
-          <div class="meta-container">
-            <div class="img-SScreen"></div>
-            <div class="meta"></div>
-          </div>
-          <div class="description"></div>
-          <div class="subjects"></div>
-          <a href="#">Search for this E-Book in PDF Drive</a>
-          <hr />
-          <div class="find-more"></div>
-          <div class="notes"></div>
-        </section>
       </div>
     </div>
   </body>
