Organized code in controller and views for seperation of concerns

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="shortcut icon" href="src/img/logo/book.png" type="image/png" />
 
     <link rel="stylesheet" href="src/scss/main.scss" />
-    <script defer src="src/js/views/media.js"></script>
+    <script defer src="src/js/views/mediaView.js"></script>
     <script type="module" defer src="src/js/controller.js"></script>
   </head>
   <body>
