Documented Javascript based on JSDoc, Seperated web component defination from controller to view, removed some bugs, added title attribute to book-item-component, made fetching a little faster

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bookworm</title>
+
+    <!-- Static Assets -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +23,10 @@
     <link rel="preload" href="src/img/logo/bookworm.png" as="image" />
     <link rel="shortcut icon" href="src/img/logo/book.png" type="image/png" />
 
+    <!-- Styles -->
     <link rel="stylesheet" href="src/scss/main.scss" />
+
+    <!-- Scripts -->
     <script defer src="src/js/views/mediaView.js"></script>
     <script type="module" defer src="src/js/controller.js"></script>
   </head>
@@ -51,7 +56,7 @@
       </header>
       <section>
         <div class="search-container">
-          <!-- Book Items Component Here -->
+          <!-- Book Items Web Component Here -->
         </div>
       </section>
     </div>
@@ -68,7 +73,7 @@
         <span><i class="fas fa-times-circle"></i></span>
       </div>
       <div class="bookmarks-container">
-        <!-- Bookmarks Component Here -->
+        <!-- Book Item Web Component Here for Bookmarks -->
       </div>
     </div>
     <div class="book-info">
