Some adjustments for mobile view

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
       <section>
         <div class="search-container">
           <!-- Book Items Web Component Here -->
+          <span class="msg">
+            Search for a book to find results here. You can add bookmarks to a
+            certain book and create a note for a specific book using this
+            website.
+          </span>
         </div>
       </section>
     </div>
